# ASMI-NET_Dashbboard

./: .gitignore  AMSI-Net.ipynb  Dockerfile  main.py  pyproject.toml  requirements.txt  vercel.json
backend/: .gitattributes  Dockerfile  app.py  class_mappings.py  explainers.py  hf_space_readme.md  model_loader.py  models_arch.py  preprocessing.py  verify_model.py
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals.css  page.tsx
frontend/src/components/: ImageUploadZone.tsx  NeuralNetworkLoader.tsx  PredictionResults.tsx  TechnicalSpecs.tsx
frontend/src/components/ui/: card.tsx
model/: best_model.pth
